[build-system]
requires = [
    'flit_core >=2,<4',
    'pytoml',
    'wheel',
    'importlib_metadata>=0.7; python_version < "3.8"'
]
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'scanpy_helpers'
author = 'Gregor Sturm'
author-email = 'gregor.sturm@i-med.ac.at'
home-page = 'https://github.com/grst/scirpy'
description-file = "README.rst"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
requires-python = '>= 3.6'
requires = [
    'anndata>=0.7.3',
    'scanpy>=1.6.0',
    'pandas>=1.0',
    'numpy',
    'scipy',
]

[tool.flit.metadata.requires-extra]
test = [
    'pytest',
    'black'
]


[tool.pytest.ini_options]
minversion = 6.0
testpaths = 'scanpy_helpers/tests'
norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']
